New package: ADAPT v1.0.0-DEV
UUID: cf1f529f-af3f-4d7a-b5f1-0e7d3fdd5852
Repo: https://github.com/kmsherbertvt/ADAPT.jl
Tree: 8ecf7c85dc7fc90fb7eb5e84749ad5a0845323c8

--- a/Registry.toml
+++ b/Registry.toml
@@ -5,3 +5,4 @@ repo = "https://github.com/kmsherbertvt/VTQuantumJuliaRegistry"
 [packages]
 b4c031f8-e7c9-4879-896c-063a10ff8103 = { name = "BlockDavidson", path = "B/BlockDavidson" }
 be646426-f34c-4536-b1d4-a45a9633e6db = { name = "PauliOperators", path = "P/PauliOperators" }
+cf1f529f-af3f-4d7a-b5f1-0e7d3fdd5852 = { name = "ADAPT", path = "A/ADAPT" }
