--- a/Registry.toml
+++ b/Registry.toml
@@ -3,6 +3,7 @@ uuid = "6fec464c-8e4c-44e9-9f58-fdbfd4beb5e5"
 repo = "https://github.com/kmsherbertvt/VTQuantumJuliaRegistry"
 
 [packages]
+b2d0ec06-4a30-46b9-b20f-1283d2f7986d = { name = "TemporaryArrays", path = "T/TemporaryArrays" }
 b4c031f8-e7c9-4879-896c-063a10ff8103 = { name = "BlockDavidson", path = "B/BlockDavidson" }
 be646426-f34c-4536-b1d4-a45a9633e6db = { name = "PauliOperators", path = "P/PauliOperators" }
 cf1f529f-af3f-4d7a-b5f1-0e7d3fdd5852 = { name = "ADAPT", path = "A/ADAPT" }
